<resources>
    <string name="app_name">Top Reddits reader</string>
    <string name="top_reddits">Top Reddits</string>
    <string name="upvote">Upvote</string>
    <string name="downvote">Downvote</string>
    <string name="by">by</string>
    <string name="open_on_reddit">Open on Reddit</string>
    <string name="chat_bubble">Chat bubble</string>
    <string name="http">http</string>
    <string name="image">image</string>
    <string name="zero">0</string>
    <string name="negative_votes">-%d</string>
    <string name="camera">Camera</string>
</resources>
