<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/iv_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:adjustViewBounds="true"
            android:contentDescription="@null"
            app:layout_constraintBottom_toTopOf="@id/iv_arrow_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <ImageView
            android:id="@+id/iv_arrow_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/upvote"
            android:src="@drawable/outline_arrow_upward_24"
            app:layout_constraintBottom_toTopOf="@id/iv_num_comments"
            app:layout_constraintEnd_toStartOf="@id/tv_votes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_image" />

        <TextView
            android:id="@+id/tv_votes"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@id/iv_arrow_up"
            app:layout_constraintEnd_toStartOf="@id/iv_arrow_down"
            app:layout_constraintStart_toEndOf="@id/iv_arrow_up"
            app:layout_constraintTop_toTopOf="@id/iv_arrow_up" />

        <ImageView
            android:id="@+id/iv_arrow_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/downvote"
            android:src="@drawable/outline_arrow_downward_24"
            app:layout_constraintBottom_toBottomOf="@id/iv_arrow_up"
            app:layout_constraintStart_toEndOf="@id/tv_votes"
            app:layout_constraintTop_toTopOf="@id/iv_arrow_up" />

        <ImageView
            android:id="@+id/iv_num_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/chat_bubble"
            android:src="@drawable/outline_chat_bubble_outline_24"
            app:layout_constraintBottom_toTopOf="@id/tv_label_author"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_arrow_up" />

        <TextView
            android:id="@+id/tv_num_comments"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@id/iv_num_comments"
            app:layout_constraintStart_toEndOf="@id/iv_num_comments"
            app:layout_constraintTop_toTopOf="@id/iv_num_comments" />

        <TextView
            android:id="@+id/tv_label_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/by"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/btn_open"
            app:layout_constraintEnd_toStartOf="@id/tv_author"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_num_comments" />

        <TextView
            android:id="@+id/tv_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/tv_label_author"
            app:layout_constraintTop_toTopOf="@id/tv_label_author" />

        <Button
            android:id="@+id/btn_open"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/open_on_reddit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_label_author" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
